--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "webpack-app",
+  "name": "components",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "webpack-dashboard -- webpack-dev-server",
-    "prebuild": "rimraf dist",
-    "build": "webpack -p"
+    "demo": "node script/examples"
   },
   "keywords": [],
-  "author": "",
-  "license": "",
+  "author": "nobo",
+  "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.3",
@@ -59,6 +57,11 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "babel-eslint": "^8.2.6",
+    "classnames": "^2.2.6",
+    "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2"
   }
 }
