--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "simple-tree-store": "^1.1.2",
+    "table-multiple-header": "^1.0.0"
   }
 }
