--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "babel-eslint": "^8.2.6",
     "classnames": "^2.2.6",
+    "mini-store": "^1.1.2",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
